# serializer version: 1
# name: TestBstoneGenerator.test_generate[Aliens of Gold (Shareware)-bs1]
  tuple(
    list([
      '/usr/bin/bstone',
      '--profile_dir',
      '/userdata/system/configs/bstone',
      '--data_dir',
      '/userdata/roms/bstone/Aliens of Gold (Shareware)',
      '--aog_sw',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestBstoneGenerator.test_generate[Aliens of Gold (Shareware)-bs1][config]
  '''
  vid_width "1920"
  vid_height "1080"
  vid_is_widescreen "0"
  vid_is_vsync "0"
  vid_is_ui_stretched "0"
  
  '''
# ---
# name: TestBstoneGenerator.test_generate[Aliens of Gold-bs6]
  tuple(
    list([
      '/usr/bin/bstone',
      '--profile_dir',
      '/userdata/system/configs/bstone',
      '--data_dir',
      '/userdata/roms/bstone/Aliens of Gold',
      '--aog',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestBstoneGenerator.test_generate[Aliens of Gold-bs6][config]
  '''
  vid_width "1920"
  vid_height "1080"
  vid_is_widescreen "0"
  vid_is_vsync "0"
  vid_is_ui_stretched "0"
  
  '''
# ---
# name: TestBstoneGenerator.test_generate[Planet Strike-vsi]
  tuple(
    list([
      '/usr/bin/bstone',
      '--profile_dir',
      '/userdata/system/configs/bstone',
      '--data_dir',
      '/userdata/roms/bstone/Planet Strike',
      '--ps',
    ]),
    dict({
      'SDL_GAMECONTROLLERCONFIG': '030000005e0400000a0b000005040000,Generic Xbox pad,platform:Linux,b:b0,a:b1,dpdown:h0.4,leftx:a0,lefty:a1,rightx:a2,righty:a3,lefttrigger:b6,leftstick:b11,dpleft:h0.8,rightshoulder:b5,leftshoulder:b4,righttrigger:b7,rightstick:b12,dpright:h0.2,back:b8,start:b9,dpup:h0.1,y:b2,x:b3,',
      'SDL_JOYSTICK_HIDAPI': '0',
    }),
  )
# ---
# name: TestBstoneGenerator.test_generate[Planet Strike-vsi][config]
  '''
  vid_width "1920"
  vid_height "1080"
  vid_is_widescreen "0"
  vid_is_vsync "0"
  vid_is_ui_stretched "0"
  
  '''
# ---
# name: TestBstoneGenerator.test_generate_config[{'bstone_ui_stretched': '0'}][config]
  '''
  vid_width "1920"
  vid_height "1080"
  vid_is_widescreen "0"
  vid_is_vsync "0"
  vid_is_ui_stretched "0"
  
  '''
# ---
# name: TestBstoneGenerator.test_generate_config[{'bstone_ui_stretched': '1'}][config]
  '''
  vid_width "1920"
  vid_height "1080"
  vid_is_widescreen "0"
  vid_is_vsync "0"
  vid_is_ui_stretched "1"
  
  '''
# ---
# name: TestBstoneGenerator.test_generate_config[{'bstone_vsync': '0'}][config]
  '''
  vid_width "1920"
  vid_height "1080"
  vid_is_widescreen "0"
  vid_is_vsync "0"
  vid_is_ui_stretched "0"
  
  '''
# ---
# name: TestBstoneGenerator.test_generate_config[{'bstone_vsync': '1'}][config]
  '''
  vid_width "1920"
  vid_height "1080"
  vid_is_widescreen "0"
  vid_is_vsync "1"
  vid_is_ui_stretched "0"
  
  '''
# ---
# name: TestBstoneGenerator.test_generate_config[{'bstone_widescreen': '0'}][config]
  '''
  vid_width "1920"
  vid_height "1080"
  vid_is_widescreen "0"
  vid_is_vsync "0"
  vid_is_ui_stretched "0"
  
  '''
# ---
# name: TestBstoneGenerator.test_generate_config[{'bstone_widescreen': '1'}][config]
  '''
  vid_width "1920"
  vid_height "1080"
  vid_is_widescreen "1"
  vid_is_vsync "0"
  vid_is_ui_stretched "0"
  
  '''
# ---
# name: TestBstoneGenerator.test_generate_existing[config]
  '''
  
  foo_bar "baz"
  vid_width "1920"
  vid_height "1080"
  vid_is_vsync "0"
  vid_is_ui_stretched "0"
  ham_spam "blam"
  vid_is_widescreen "0"
  
  '''
# ---
# name: TestBstoneGenerator.test_get_hotkeys_context
  dict({
    'keys': dict({
      'exit': 'KEY_F10',
      'menu': 'KEY_ESC',
      'restore_state': 'KEY_F3',
      'save_state': 'KEY_F2',
      'screenshot': 'KEY_F5',
    }),
    'name': 'bstone',
  })
# ---
